  * Deprecated np.float_ and np.NaN aliases have been replaced with
    their original type value (np.float64 and np.nan) (PR #4272)
  * Fixes a case where qcprot.CalcRMSDRotationalMatrix would return a
    RMSD of None
  * Fixes hydrogenbonds tutorial path to point to hbonds (Issue #4285, PR #4286)
  * Fix atom charge reading in PDBQT parser (Issue #4282, PR #4283)

Enhancements
  * Add faster nucleic acid Major and Minor pair distance calculators using
    AnalysisBase for updated nucleicacids module (Issue #3720, PR #3735)
  * Adds external sidebar links (Issue #4296)
  * Updated lib.qcprot.CalcRMSDRotationalMatrix to accept either float32 or float64
    inputs (PR #4273, part of #3927)
  * Added a warning about charge neutrality to the documentation of
    `DielectricConstant` (Issue #4262, PR #4263)
  * Add support for reading chainID info from prmtop amber topologies (PR #4007)
  * Add support for reading chainID info from GROMACS TPR topologies 
    (Issue #3994, PR #4281)  
  * Add support for reading chainID info from Autodock PDBQT files (Issue #4207,
    PR #4284)

Changes
  * Biopython is now an optional dependency (Issue #3820, PR #4332)
  * Networkx is now an optional dependency (Issue #3822).
  * High memory tests (enabled through the environment variable
    `ENABLE_HIGH_MEM_UNIT_TESTS` are now only enabled if the environment variable
    is set to "true") (PR #4295)
  * The `mda-xdrlib` module is now a core dependency of MDAnalysis
    replacing the now deprecated `xdrlib` core Python library
    (PR #4271)
  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)
  * Results for WatsonCrickDist nucleic acids analysis are now stored in 
    `analysis.nucleicacids.WatsonCrickDist.results.distances` (Issue #3720, PR #3735)

Deprecations
  * MDAnalysis.lib.util is deprecated and will be removed in version 3.0
    (Issue #3649)
  * The TRZ reader & writer are deprecated and will be removed in version 3.0
    (PR #4335)