@@ -4,3 +4,4 @@
 from ..coordinates cimport timestep
 from .formats cimport libmdaxdr
 from .formats cimport libdcd
+from . cimport c_distances
